# neuropace

./: .replit  API_Documentation.md  alembic.ini  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  schemas.py
.local/state/replit/agent/filesystem/: filesystem_state.json
alembic/: env.py
attached_assets/: Pasted--4-System-Implementation-and-Testing-4-1-Overview-The-Adaptive-Personalized-Learning-Schedule-1756130546445_1756130546445.txt  Pasted--app-services-document-processor-py-import-PyPDF2-import-pytesseract-from-PIL-import-Image-import-r-1756129774443_1756129774443.txt
routers/: __init__.py  auth.py  materials.py  performance.py  quizzes.py  schedules.py  sessions.py
services/: document_processor.py  learning_analytics.py  ml_service.py  pdf_processor.py  performance_tracker.py  quiz_generator.py  scheduler.py  spaced_repetition_scheduler.py
